Doc: Fix template code for unordered lists
The CSS for unordered lists placed a nested list
vertically too close to its parent list item.
This commit fixes the issue.

Task-number: QTBUG-38217

--- a/doc/global/template/style/offline.css
+++ b/doc/global/template/style/offline.css
@@ -464,7 +464,7 @@ List
 */
 
 ul {
-    padding-bottom: 2px
+    margin-top: 10px;
 }
 
 li {
